# bokehbowl

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml  worker.py  wrangler.toml
bokehbowl/: admin.py  app.py  auth.py  config.py  db.py  mailer.py  web.py
bokehbowl/static/: robots.txt  site.css
bokehbowl/templates/: about.html  account.html  admin.html  admin_login.html  base.html  goodbye.html  index.html  login.html  mailing.html  postcard.html  privacy.html  verify.html
bokehbowl/templates/components/: form.html
instance/: README.md
instance/templates/: README.md
migrations/: env.py
migrations/versions/: 5ea8adf60cba_initial_schema.py
tests/: conftest.py  test_admin.py  test_pages.py  test_signup.py
